<resources>

    <!-- Many places -->
    <string name="app_name"><b>Kirolapp</b></string>
    <string name="default_text">Texto provisional</string>
    <string name="next">Siguiente</string>
    <string name="cancel">❌</string>
    <string name="confirm">✔️</string>

    <!-- MainActivity (Login) -->
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="subtitle">\" XX veces has entrado en Kirolapp. ¡Oso ondo!\"</string>

    <!-- ListaActivity -->
    <string name="km">km</string>
    <string name="logout">Cerrar sesión</string>
    <string name="add_new_workout">Nuevo ejercicio</string>
    <string name="new_workout_title">Nuevo ejercicio</string>
    <string name="workout_type">Tipo de actividad</string>
    <string name="is_night_workout">¿Horario nocturno?</string>
    <string name="date">Fecha (dd/mm/aaaa)</string>
    <string name="distance">Distancia</string>
    <string name="save">Guardar</string>

    <!-- AlertDialogs -->
    <string name="ad_closeapp"> ¿Estás seguro que deseas salir de Kirolapp?</string>
    <string name="ad_exitwithoutsaving"> Si sales los datos no se guardarán. \n¿Deseas continuar?</string>


    <!-- -->
        <string-array name="listaPlanetas">
            <item>Mercurio</item>
            <item>Venus</item>
            <item>Tierra</item>
            <item>Marte</item>
            <item>Jupiter</item>
            <item>Saturno</item>
            <item>Urano</item>
            <item>Neptuno</item>
        </string-array>
        <string-array name="idPlanetas">
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
            <item>6</item>
            <item>7</item>
            <item>8</item>
        </string-array>
        <string-array name="paises">
            <item>Belgica</item>
            <item>Holanda</item>
            <item>Luxemburgo</item>
        </string-array>
        <string-array name="codpaises">
            <item>1</item>
            <item>2</item>
            <item>3</item>
        </string-array>

</resources>